Corrected Alignment
Corrected alignment of hero boy

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body {
   color: #fff;
   top: 40%;
   left: 50%;
-  font-size: 80px;
+  font-size: 4.166666666666667vw;
   transform: translate(-50%, -50%);
   animation: letter 1s ease-in-out infinite alternate;
 }
@@ -50,6 +50,8 @@ body {
 .preloader img {
   position: absolute;
   bottom: 0;
+  width: 30.208333333333332vw;
+  height: 21.71875vw;
   transform: translateX(-100%);
   animation: preload ease-in-out 7s infinite;
 }
@@ -258,6 +260,7 @@ nav {
 .container1 {
   height: 100vh;
   width: 100%;
+  position: relative;
 }
 
 .container1 h1 {
@@ -277,18 +280,19 @@ nav {
 .container1 .hello img {
   height: 31.25vw;
   position: absolute;
-  top: 50%;
+  top: 60%;
   left: 50%;
+  transform: translate(-50%, -50%);
   z-index: 5;
   animation: helloBoy 3s ease-in-out infinite alternate;
 }
 
 @keyframes helloBoy {
   from {
-    transform: translate(-50%, 140%);
+    transform: translate(-50%, -55%);
   }
   to {
-    transform: translate(-50%, 135%);
+    transform: translate(-50%, -45%);
   }
 }
 
